# enigma2-1

./: AUTHORS  ChangeLog  Navigation.py  README  README.md  configure.ac  enigma2.bb  lamedb  mytest.py  skin.py
data/: Makefile.am  keymap.ntr  keymap.u80  keymap.xml  setup.xml  skin_default.xml  startwizard.xml
data/defaults/: Makefile.am
data/rc_models/: Makefile.am
data/rc_models/et4x00/: Makefile.am  rcpositions.xml
data/skin_default/: Makefile.am
data/skin_default/spinner/: Makefile.am
lib/components/: Makefile.inc  tuxtxtapp.cpp  tuxtxtapp.h
lib/driver/: Makefile.inc  vfd.cpp  vfd.h
lib/dvb/: decoder.cpp
lib/python/: enigma_python.i
lib/python/Components/: AVSwitch.py  OnlineUpdateCheck.py  RcModel.py  UsageConfig.py
lib/python/Components/Renderer/: Pig.py  dmmChannelNumber.py  dmmMaxTemp.py  dmmNextEvent.py  dmmVolumeText.py
lib/python/Plugins/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/AddOnopendroid/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/Infopanel/: QuickMenu.py  SoftwarePanel.py  plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: Flash_online.py  ImageBackup.py  Makefile.am  imagewizard.xml  plugin.py
lib/python/Screens/: About.py  InfoBar.py  InfoBarGenerics.py  InstallWizard.py  PictureInPicture.pyo  PluginBrowser.py  Rc.py  SkinSetup.py  SoftwareUpdate.py
main/: bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po~  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  it.po
tools/: enigma2.sh.in
(+1 files in other folders)
