if XTREND
SUBDIRS = et4x00 et6x00 et6500 et9x00 et9500
endif
 
if ODIN
SUBDIRS = odinm9 odinm7 odinm6
endif
 
if VUSOLO
SUBDIRS = vu
endif
 
if VUSOLO2
SUBDIRS = vu
endif
 
if VUUNO
SUBDIRS = vu
endif
 
if VUDUO
SUBDIRS = vu
endif
 
if VUULTIMO
SUBDIRS = vu2
endif
 
if VUDUO2
SUBDIRS = vu3
endif
 
if XP1000
SUBDIRS = xp1000
endif
